# biometry-auth-service

./: .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml
auth_service/: config.py  main.py  utils.py
auth_service/database/: __init__.py  api.py  mongo.py  sql.py
auth_service/face_processing/: __init__.py  data.py  exception.py  main.py  profiling.py  verification.py
auth_service/validation/: __init__.py  detection.py  exception.py  liveness.py  suitability.py
tests/: test.ipynb  test_batch_auth.py
